--- a/less/buttons.less
+++ b/less/buttons.less
@@ -1,7 +1,7 @@
 .welcomeContainer .topButton {
     background: #339EF9;
-    font-family: 'Open Sans';
-    font-size: 35px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 3.5rem;
     font-weight: 500;
     color: white;
     border-radius: 100%;
@@ -11,22 +11,26 @@
     height: 180px;
     border: none;
     position: relative;
+    padding: 0 10px;
     top: 375px;
     align-self: center;
+    box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.5), 0 18px 40px -12px rgba(51,158,249,0.4);
 
     @media @mobile {
         background: white;
-        font-size: 30px;
+        font-size: 3rem;
         color: #339EF9;
-        top: 335px;
+        top: 230px;
+        padding: 0 20px;
+        box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.5);
     }
   }
   
     .mainContent .bottomButton {
         background: white;
-        font-family: "Open Sans";
+        font-family: 'Open Sans', sans-serif;
         font-weight: 500;
-        font-size: 35px;
+        font-size: 3.5rem;
         color: #339EF9;
         border-radius: 100%;
         cursor: pointer;
@@ -38,13 +42,14 @@
         border: none;
         top: 90px;
         box-shadow: 0 18px 40px -12px rgba(212,212,212,0.5);
+        padding: 0 10px;
 
         @media @mobile {
             background: #339EF9;
-            font-size: 30px;
+            font-size: 3rem;
             color: white;
             border: none;
             top: 55px;
-            padding-bottom: 20px;
+            padding: 0 20px;
         }
     }
