--- a/less/homepage.less
+++ b/less/homepage.less
@@ -1,7 +1,8 @@
 .container {
     max-width: 1024px;
     width: 100%;
-    margin: 0 auto; 
+    margin: 0 auto;
+    position: relative;
 
     @media @mobile {
         width: 100%;
@@ -14,7 +15,7 @@
     height: 813px;
     display: flex;
     flex-direction: column;
-    background: url(/images/Desktop\ Graphic.svg);
+    background: url(../images/Desktop-Graphic.svg);
     background-size: contain 200%;
     background-repeat: no-repeat;
     background-position: 347px 76px;
@@ -23,7 +24,7 @@
     @media @mobile {
         height: 600px;
         background-position: 50%;
-        background-position: 50% 200px;
+        background-position: 50% 150px;
         background-size: contain;
     }
 }
@@ -45,30 +46,33 @@
 }
 
 .welcomeContainer .welcomeContent #title {
-    font-family: 'Open Sans';
-    font-size: 64px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 6.4rem;
     font-weight: bold;
-    line-height: 87px;
+    line-height: 8.7rem;
     letter-spacing: 0.8px;
-    color: #339EF9;
+    color: white;
+    z-index: 1;
 
     @media @mobile {
-        font-size: 36px;
+        font-size: 3.6rem;
         font-weight: 600;
         line-height: 49px;
+        color: #339EF9;
     }
 }
 
 .welcomeContainer .welcomeContent #subtitle {
-    font-family: "Nunito";
-    font-size: 40px;
+    font-family: 'Nunito', sans-serif;
+    font-size: 4rem;
     font-weight: normal;
     line-height: 54px;
-    color: #339EF9;
+    color: white;
     padding-top: 4px;
+    z-index: 1;
 
     @media @mobile {
-        font-size: 24px;
+        font-size: 2.4rem;
         line-height: 32px;
         color: #4E4E4E
     }
@@ -78,7 +82,7 @@
 
 .mainContent {
     width: 100%;
-    height: 1277px;
+    height: auto;
     background-color: #F7F7F7;
     color: #339EF9;
     display: flex;
@@ -103,11 +107,11 @@
 
     @media @mobile {
         width: 75%;
-        padding-top: 80px;
+        padding-top: 30px;
     }
 }
 
-.mainContent .middleContainer img {
+.mainContent .middleContainer .iphoneImg {
     size: 447px 926px;
 
     @media @mobile {
@@ -124,7 +128,6 @@
 
     @media @mobile {
         width: 100%;
-        padding-top: 120px;
         margin: auto;
     }
 }
@@ -145,8 +148,8 @@
 }
 
 .mainContent .missionStatement #feature {
-    font-family: 'Open Sans';
-    font-size: 50px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 5rem;
     font-weight: bold;
     line-height: 64px;
     margin-bottom: 30px;
@@ -158,11 +161,11 @@
 }
 
 .mainContent .missionStatement .indyContent .indyHeader {
-    font-family: 'Open Sans';
-    font-size: 24px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 2.4rem;
     font-weight: bold;
     line-height: 31px;
-    padding-top: 92px;
+    padding-top: 40px;
 
     @media @mobile {
         font-weight: 600;
@@ -171,11 +174,10 @@
 }
 
 .mainContent .missionStatement .indyContent .indyInfo {
-    font-family: 'Nunito';
-    font-size: 18px;
+    font-family: 'Nunito', sans-serif;
+    font-size: 1.8rem;
     font-weight: bold;
     line-height: 24px;
-    padding-top: 11px;
     color: #4E4E4E;
 
     @media @mobile {
