--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,7 +2,16 @@ header {
     width: 100%;
     height: 70px;
     background-color: #FFFFFF;
-    box-shadow: 2px gray;
+    box-shadow: 0 3px 4px -6px rgba(0,0,0,1.0);
+
+    .blob {
+        position: absolute;
+        z-index: 0;
+
+        @media @mobile {
+            display: none;
+        }
+    }
 
     @media @mobile {
         height: 50px;
@@ -12,45 +21,38 @@ header {
 header nav {
   display: flex;
   width: 100%;
+  height: 100%;
   justify-content: space-between;
-  padding-top: 17px;
-  padding-bottom: 18px;
-  border-bottom: 1px solid #F7F7F7;
+  padding: 17px 32px 18px;
+  border-bottom: 1px solid white;
+  
 
   @media @mobile {
-      padding-top: 11px;
-      padding-bottom: 11px;
-  }
-&:first-child {
-    padding-left: 32px;
-
-    @media @mobile {
-        padding-left: 24px;
+      padding: 11px 24px;
     }
-}
-&:last-child {
-    padding-right: 32px;
-
-    @media @mobile {
-        padding-right: 24px;
-    }
-}
 }
 
 header nav a {
-    font-family: 'Open Sans';
-    font-size: 30px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 3rem;
     font-weight: normal;
     letter-spacing: -0.96px;
     line-height: 41px;
-    color: #339EF9;
+    color: white;
     text-decoration: none;
+    z-index: 2;
+    
+    &:last-child {
+        color: #339EF9;
+    }
+
 
     @media @mobile {
-        font-size: 24px;
+        font-size: 2.4rem;
         font-weight: 600;
         letter-spacing: -0.77px;
         line-height: 33px;
+        color: #339EF9;
     }
 
 &:hover {
