Eliminated bottom button on mobile, fixed iPhone image, & linked front end

--- a/less/homepage.less
+++ b/less/homepage.less
@@ -101,9 +101,9 @@
 .mainContent .middleContainer {
     display: flex;
     justify-content: space-between;
-    width: 62%;
+    width: 80%;
     margin: auto;
-    padding-top: 290px;
+    padding-top: 180px;
 
     @media @mobile {
         width: 75%;
@@ -112,7 +112,8 @@
 }
 
 .mainContent .middleContainer .iphoneImg {
-    size: 447px 926px;
+    width: 447px;
+    height: 926px;
 
     @media @mobile {
         display: none;
@@ -120,11 +121,11 @@
 }
 
 .mainContent .missionStatement {
-    width: 70%;
+    width: 38%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 30px;
+    padding-right: 30px;
 
     @media @mobile {
         width: 100%;
