--- a/css/index.css
+++ b/css/index.css
@@ -190,6 +190,7 @@ body {
     border: none;
     top: 55px;
     padding: 0 20px;
+    display: none;
   }
 }
 /* Footer */
@@ -337,9 +338,9 @@ footer nav a {
 .mainContent .middleContainer {
   display: flex;
   justify-content: space-between;
-  width: 62%;
+  width: 80%;
   margin: auto;
-  padding-top: 290px;
+  padding-top: 180px;
 }
 @media (max-width: 500px) {
   .mainContent .middleContainer {
@@ -348,7 +349,8 @@ footer nav a {
   }
 }
 .mainContent .middleContainer .iphoneImg {
-  size: 447px 926px;
+  width: 447px;
+  height: 926px;
 }
 @media (max-width: 500px) {
   .mainContent .middleContainer .iphoneImg {
@@ -356,11 +358,11 @@ footer nav a {
   }
 }
 .mainContent .missionStatement {
-  width: 70%;
+  width: 38%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-left: 30px;
+  padding-right: 30px;
 }
 @media (max-width: 500px) {
   .mainContent .missionStatement {
